--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -132,7 +132,7 @@
         <activity
             android:name=".activity.DocumentActivity"
             android:label="@string/app_name"
-            android:launchMode="singleTop"
+            android:launchMode="standard"
             android:maxRecents="5"
             android:parentActivityName=".activity.MainActivity"
             android:taskAffinity=".activity.DocumentActivity"
