--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -128,7 +128,11 @@
                 <action android:name="android.intent.action.MAIN" />
             </intent-filter>
         </activity>
-
+        <activity
+            android:name=".activity.DocumentOpener"
+            android:theme="@android:style/Theme.NoDisplay"
+            android:launchMode="singleTop"
+            />
         <activity
             android:name=".activity.DocumentActivity"
             android:label="@string/app_name"
