Set activity resizable flag, closes #1006

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,6 +44,7 @@
         android:usesCleartextTraffic="true"
         android:appCategory="productivity"
         android:isGame="false"
+        android:resizeableActivity="true"
         android:theme="@style/AppTheme.Light"
         tools:targetApi="o">
         <activity
