Create Makefile, Add GitHub Actions

--- a/build.gradle
+++ b/build.gradle
@@ -59,6 +59,12 @@ allprojects {
     tasks.matching { task -> task.name.matches('.*generate.*Resources') }.all {
         task -> task.dependsOn copyRepoFiles
     }
+
+    tasks.matching {it instanceof Test}.all { // Enable unit test output, html+xml output
+        testLogging.events "passed", "skipped", "failed", "standardOut", "standardError"
+		reports.junitXml.enabled = true
+		reports.html.enabled = true
+    }
 }
 
 task clean(type: Delete) {
