--- a/.github/workflows/build-android-project.yml
+++ b/.github/workflows/build-android-project.yml
@@ -1,10 +1,10 @@
-name: "Android project" 
+name: "CI"
 
 on: [push, pull_request]
 
 jobs:
   build:
-    if: "!contains(github.event.head_commit.message, 'skip ci')"
+    if: "!contains(github.event.head_commit.message, 'ci skip') && ((github.event_name != 'pull_request') || (github.event_name == 'pull_request' && github.event.pull_request.head.repo.full_name != github.repository))"
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
