--- a/build.gradle
+++ b/build.gradle
@@ -62,8 +62,9 @@ allprojects {
 
     tasks.matching {it instanceof Test}.all { // Enable unit test output, html+xml output
         testLogging.events "passed", "skipped", "failed", "standardOut", "standardError"
-		reports.junitXml.enabled = true
-		reports.html.enabled = true
+        testLogging.showStandardStreams = true
+        reports.junitXml.enabled = true
+        reports.html.enabled = true
     }
 }
 
