--- a/.github/workflows/build-android-project.yml
+++ b/.github/workflows/build-android-project.yml
@@ -1,10 +1,10 @@
 name: "CI"
 
-on: [push, pull_request]
+on: [push, pull_request_target]
 
 jobs:
   build:
-    if: "!contains(github.event.head_commit.message, 'ci skip') && ((github.event_name != 'pull_request') || (github.event_name == 'pull_request' && github.event.pull_request.head.repo.full_name != github.repository))"
+    if: "!contains(github.event.head_commit.message, 'ci skip') && (!contains(github.event_name, 'pull_request') || (contains(github.event_name, 'pull_request) && github.event.pull_request.head.repo.full_name != github.repository))"
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
