Create Makefile, Remove all CI systems, add GitHub CI (#1151 by @gsantner)
* Create Makefile to make building, testing & linting easier, don't have gradle commands in CI workflow
* Support GitHub Actions
* Remove Travis CI - Open Source love is gone
* Remove CircleCI, one CI to maintain is enough
* Fix/Ignore lots of lint warnings
* New Crowdin updates (#1152)

--- a/build.gradle
+++ b/build.gradle
@@ -59,6 +59,13 @@ allprojects {
     tasks.matching { task -> task.name.matches('.*generate.*Resources') }.all {
         task -> task.dependsOn copyRepoFiles
     }
+
+    tasks.matching {it instanceof Test}.all { // Enable unit test output, html+xml output
+        testLogging.events "passed", "skipped", "failed", "standardOut", "standardError"
+        testLogging.showStandardStreams = true
+        reports.junitXml.enabled = true
+        reports.html.enabled = true
+    }
 }
 
 task clean(type: Delete) {
