Upgrade compileSdk, targetSdk to 29, buildTools to 29.0.3 Set requestLegacyExternalStorage to true

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,7 +46,8 @@
         android:isGame="false"
         android:resizeableActivity="true"
         android:theme="@style/AppTheme.Light"
-        tools:targetApi="o">
+        tools:targetApi="o"
+        android:requestLegacyExternalStorage="true">
         <activity
             android:name=".activity.MainActivity"
             android:label="@string/app_name"
