--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,17 +37,22 @@
     <application
         android:name=".App"
         android:allowBackup="true"
+        android:appCategory="productivity"
         android:fullBackupContent="@xml/full_backup_rules"
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
-        android:supportsRtl="true"
-        android:usesCleartextTraffic="true"
-        android:appCategory="productivity"
         android:isGame="false"
+        android:label="@string/app_name"
+        android:requestLegacyExternalStorage="true"
         android:resizeableActivity="true"
+        android:supportsRtl="true"
         android:theme="@style/AppTheme.Light"
-        tools:targetApi="o"
-        android:requestLegacyExternalStorage="true">
+        android:usesCleartextTraffic="true"
+        tools:targetApi="o">
+
+        <meta-data
+            android:name="android.webkit.WebView.MetricsOptOut"
+            android:value="true" />
+
         <activity
             android:name=".activity.MainActivity"
             android:label="@string/app_name"
@@ -64,8 +69,9 @@
             android:label="@string/settings"
             android:parentActivityName=".activity.MainActivity"
             android:theme="@style/AppTheme.Light" />
-        <activity android:name=".activity.ActionOrderActivity"
-            android:parentActivityName=".activity.SettingsActivity" >
+        <activity
+            android:name=".activity.ActionOrderActivity"
+            android:parentActivityName=".activity.SettingsActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".activity.SettingsActivity" />
@@ -132,9 +138,8 @@
         </activity>
         <activity
             android:name=".activity.DocumentRelayActivity"
-            android:theme="@android:style/Theme.NoDisplay"
             android:launchMode="singleTop"
-            />
+            android:theme="@android:style/Theme.NoDisplay" />
         <activity
             android:name=".activity.DocumentActivity"
             android:label="@string/app_name"
