Add QuadFlask/colorpicker source to Markor repo and compile it, as lib of our used version not offered anymore

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -136,8 +136,8 @@ dependencies {
     implementation 'com.pixplicity.generate:library:1.1.8'
     implementation 'com.github.AppIntro:AppIntro:4.2.3'
     implementation 'com.kailashdabhi:om-recorder:1.1.5'
-    implementation 'com.github.QuadFlask:colorpicker:0.0.13'
     implementation 'com.github.mertakdut:EpubParser:1.0.95'
+    implementation project(':app:thirdparty-lib-src:QuadFlask-colorpicker')
 
     // Tool libraries
     //noinspection AnnotationProcessorOnCompilePath
