--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,5 +1,5 @@
 # vim: sw=2 ts=2 noexpandtab:
-commit_message: "[ci skip] Crowdin translation bot: New translations for %language%"
+commit_message: "[ci skip] Update translations (%language%)"
 append_commit_message: false
 files:
   - source: /app/src/main/res/values/strings.xml
