--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,6 +57,7 @@
 
         <activity
             android:name=".activity.MainActivity"
+            android:exported="true"
             android:label="@string/app_name"
             android:launchMode="singleTop"
             android:taskAffinity=".activity.MainActivity">
@@ -78,13 +79,17 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".activity.SettingsActivity" />
         </activity>
-        <activity android:name="other.writeily.widget.WrWidgetConfigure">
+        <activity
+            android:name="other.writeily.widget.WrWidgetConfigure"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_CONFIGURE" />
             </intent-filter>
         </activity>
 
-        <receiver android:name="other.writeily.widget.WrMarkorWidgetProvider">
+        <receiver
+            android:name="other.writeily.widget.WrMarkorWidgetProvider"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
             </intent-filter>
@@ -111,6 +116,7 @@
         <activity
             android:name=".activity.openeditor.OpenEditorTodoActivity"
             android:enabled="false"
+            android:exported="true"
             android:icon="@drawable/ic_launcher_todo"
             android:label="@string/todo"
             android:noHistory="true"
@@ -129,6 +135,7 @@
         <activity
             android:name=".activity.openeditor.OpenEditorQuickNoteActivity"
             android:enabled="false"
+            android:exported="true"
             android:icon="@drawable/ic_launcher_quicknote"
             android:label="@string/quicknote"
             android:noHistory="true"
@@ -141,6 +148,7 @@
         <activity
             android:name=".activity.openeditor.OpenShareIntoActivity"
             android:enabled="false"
+            android:exported="true"
             android:icon="@drawable/ic_launcher_share_into"
             android:label="@string/share_into"
             android:noHistory="true"
@@ -156,6 +164,7 @@
             android:theme="@android:style/Theme.NoDisplay" />
         <activity
             android:name=".activity.DocumentActivity"
+            android:exported="true"
             android:label="@string/app_name"
             android:launchMode="standard"
             android:maxRecents="5"
