--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,7 +47,7 @@
         android:requestLegacyExternalStorage="true"
         android:resizeableActivity="true"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme.Light"
+        android:theme="@style/AppTheme.Unified"
         android:usesCleartextTraffic="true"
         tools:targetApi="o">
 
@@ -71,7 +71,7 @@
             android:name=".activity.SettingsActivity"
             android:label="@string/settings"
             android:parentActivityName=".activity.MainActivity"
-            android:theme="@style/AppTheme.Light" />
+            android:theme="@style/AppTheme.Unified" />
         <activity
             android:name=".activity.ActionOrderActivity"
             android:parentActivityName=".activity.SettingsActivity">
@@ -170,7 +170,7 @@
             android:maxRecents="5"
             android:parentActivityName=".activity.MainActivity"
             android:taskAffinity=".activity.DocumentActivity"
-            android:theme="@style/AppTheme.Light"
+            android:theme="@style/AppTheme.Unified"
             android:windowSoftInputMode="adjustResize"
             tools:targetApi="lollipop">
             <meta-data
