--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,7 +47,7 @@
         android:requestLegacyExternalStorage="true"
         android:resizeableActivity="true"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme.Unified"
+        android:theme="@style/AppTheme.Unified.StartupFlash"
         android:usesCleartextTraffic="true"
         tools:targetApi="o">
 
@@ -70,8 +70,7 @@
         <activity
             android:name=".activity.SettingsActivity"
             android:label="@string/settings"
-            android:parentActivityName=".activity.MainActivity"
-            android:theme="@style/AppTheme.Unified" />
+            android:parentActivityName=".activity.MainActivity" />
         <activity
             android:name=".activity.ActionOrderActivity"
             android:parentActivityName=".activity.SettingsActivity">
