--- a/app/build.gradle
+++ b/app/build.gradle
@@ -134,6 +134,7 @@ dependencies {
     implementation "com.vladsch.flexmark:flexmark-ext-footnotes:${version_library_flexmark}"
     implementation "com.vladsch.flexmark:flexmark-ext-gitlab:${version_library_flexmark}"
     implementation "com.vladsch.flexmark:flexmark-ext-typographic:${version_library_flexmark}"
+    implementation "com.vladsch.flexmark:flexmark-ext-admonition:${version_library_flexmark}"
 
     // UI libs
     implementation 'com.pixplicity.generate:library:1.1.8'
