--- a/build.gradle
+++ b/build.gradle
@@ -11,9 +11,11 @@
 
 import java.text.SimpleDateFormat
 
+
+
 buildscript {
     ext {
-        version_gradle_tools = "3.6.3"
+        version_gradle_tools = '4.0.1'
         version_plugin_kotlin = "1.3.72"
         enable_plugin_kotlin = false
 
@@ -30,6 +32,14 @@ buildscript {
     }
 
     repositories {
+
+        maven { url 'https://maven.aliyun.com/repository/public' }//jcenter
+        maven { url 'https://maven.aliyun.com/repository/gradle-plugin' }//gradle-plugin
+        maven { url 'https://maven.aliyun.com/repository/central' }//central
+        maven { url 'https://maven.aliyun.com/repository/google' }//google
+        //google()
+        gradlePluginPortal()
+
         maven { url 'https://maven.google.com' }
         jcenter()
         maven { url "https://jitpack.io" }
@@ -50,10 +60,28 @@ buildscript {
 
 allprojects {
     repositories {
+        //配置阿里镜像，删除东西，添加东西
+        maven { url 'https://maven.aliyun.com/repository/public' }//jcenter
+        maven { url 'https://maven.aliyun.com/repository/gradle-plugin' }//gradle-plugin
+        maven { url 'https://maven.aliyun.com/repository/central' }//central
+        maven { url 'https://maven.aliyun.com/repository/google' }//google
+        //google()
+
         maven { url 'https://maven.google.com' }
         jcenter()
         maven { url "https://jitpack.io" }
         mavenCentral()
+    }
+
+    apply plugin: 'checkstyle'
+    task checkstyle(type: Checkstyle) {
+        source 'src'
+        include '**/*.java'
+        exclude '**/gen/**'
+        exclude '**/test/**'
+        exclude '**/androidTest/**'
+        configFile new File(rootDir, "checkstyle.xml")
+        classpath = files()
     }
 
     tasks.matching { task -> task.name.matches('.*generate.*Resources') }.all {
@@ -130,3 +158,4 @@ static String getBuildDate() {
     RFC3339_LIKE.setTimeZone(TimeZone.getTimeZone("UTC"))
     return RFC3339_LIKE.format(new Date())
 }
+s
