try to add another colorPicker

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -103,6 +103,7 @@ android {
 }
 
 dependencies {
+    compile project(":ColorPickerHex")
     // Testing
     testImplementation 'junit:junit:4.13.2'
     testImplementation 'org.assertj:assertj-core:3.13.1'
