--- a/crowdin.yml
+++ b/crowdin.yml
@@ -63,4 +63,5 @@ files:
         si-LK: si # Sinhala (Sri Lanka)
         eo: eo # Esperanto
         or: or # Odia/Oriya (India)
+        hr: hr # Croatia
     translate_attributes: 0
