Add croatian & thai language to translation system

--- a/crowdin.yml
+++ b/crowdin.yml
@@ -63,4 +63,6 @@ files:
         si-LK: si # Sinhala (Sri Lanka)
         eo: eo # Esperanto
         or: or # Odia/Oriya (India)
+        hr: hr # Croatia
+        th: th # Thai
     translate_attributes: 0
