androidsdk-upgrade-remove-butterknie

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -145,14 +145,13 @@ dependencies {
 
     // Tool libraries
     //noinspection AnnotationProcessorOnCompilePath
-    implementation "com.jakewharton:butterknife:${version_library_butterknife}"
     implementation 'commons-io:commons-io:2.7'
     if (enable_plugin_kotlin) {
         implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:${version_plugin_kotlin}"
     }
 
     // Processors
-    def anpros = ["com.jakewharton:butterknife-compiler:${version_library_butterknife}"]
+    def anpros = []
     for (anpro in anpros) {
         if (enable_plugin_kotlin) {
             kapt anpro
