--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,6 +51,8 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="o">
 
+        <profileable android:shell="true"/>
+
         <meta-data
             android:name="android.webkit.WebView.MetricsOptOut"
             android:value="true" />
