Fixed larger heading spans

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,7 +53,7 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="o">
 
-        <profileable android:shell="true"/>
+        <!-- <profileable android:shell="true"/> -->
 
         <meta-data
             android:name="android.webkit.WebView.MetricsOptOut"
