Performance: Add partial syntax highlighting, by @harshad1  #1749 (PR #1757)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,6 +53,8 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="o">
 
+        <!-- <profileable android:shell="true"/> -->
+
         <meta-data
             android:name="android.webkit.WebView.MetricsOptOut"
             android:value="true" />
