--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,5 @@ app/flavor*
 # Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
 !gradle-wrapper.jar
 
+/.favorites.json
+/.vscode
