--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
     <uses-permission android:name="com.android.launcher.permission.INSTALL_SHORTCUT" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES" />
+
     <uses-permission
         android:name="android.permission.MANAGE_EXTERNAL_STORAGE"
         tools:ignore="ScopedStorage" />
@@ -64,8 +65,8 @@
             android:exported="true"
             android:label="@string/app_name"
             android:launchMode="singleTop"
-            android:windowSoftInputMode="stateAlwaysHidden|adjustResize"
-            android:taskAffinity=".activity.MainActivity">
+            android:taskAffinity=".activity.MainActivity"
+            android:windowSoftInputMode="stateAlwaysHidden|adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -188,7 +189,8 @@
 
                 <action android:name="com.google.android.gm.action.AUTO_SEND" />
                 <category android:name="com.google.android.voicesearch.SELF_NOTE" />
-                <action android:name="android.intent.action.PROCESS_TEXT"/>
+                <action android:name="android.intent.action.PROCESS_TEXT" />
+
                 <data android:mimeType="text/plain" />
                 <data android:mimeType="text/*" />
             </intent-filter>
@@ -1089,6 +1091,7 @@
         <package android:name="org.mozilla.fennec_aurora" />
         <package android:name="org.mozilla.klar" />
         <package android:name="org.mozilla.focus" />
+
         <intent>
             <action android:name="android.intent.action.VIEW" />
             <data android:scheme="https" />
