--- a/app/build.gradle
+++ b/app/build.gradle
@@ -124,6 +124,10 @@ dependencies {
     implementation "com.vladsch.flexmark:flexmark-ext-typographic:${version_library_flexmark}"
     implementation "com.vladsch.flexmark:flexmark-ext-admonition:${version_library_flexmark}"
 
+    // csv support
+    // https://opencsv.sourceforge.net/licenses.html License: Appache2
+    implementation 'com.opencsv:opencsv:5.7.1'
+
     // UI libs
     implementation 'com.pixplicity.generate:library:1.1.8'
     implementation 'com.github.AppIntro:AppIntro:6.2.0'
